[package]
name = "query_compiler"
version = "0.1.0"
edition = "2024"

[lib]
name = "query_compiler"
path = "src/lib.rs"


[dependencies]

clap = { version = "4.5", features = ["derive"] }

polars = { version = "0.39.2", features = ["csv", "lazy", "strings", "dtype-struct", "json"] }

serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"

logos = "0.13"
serde_json = "1.0.140"
